[chromium] editing/selection/regional-indicators.html timing out on Linux https://bugs.webkit.org/show_bug.cgi?id=66510

Reviewed by Kent Tamura.

Source/WebCore:

Uses SurrogatePairAwareTextIerator in ComplexTextControllerLinux to handle surrogate pairs correctly.

No new tests. editing/selection/regional-indicators.html should pass with this patch.

* platform/graphics/chromium/ComplexTextControllerLinux.cpp:
(WebCore::ComplexTextController::nextScriptRun): Used SurrogatePairAwareTextIterator to split run.
(WebCore::surrogatePairAwareFirstCharacter): Added.
(WebCore::ComplexTextController::setupFontForScriptRun): Used surrogatePairAwareFirstCharacter() to get appropriate FontData.

LayoutTests:

ComplexTextControllerLinux is now surrogate pairs aware, therefore;
- editing/selection/regional-indicators.html should pass.
- editing/deleting/regional-indicators.html should not timeout.
- fast/text/regional-indicator-symbols.html should pass.

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/83312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94403 268f45cc-cd09-0410-ab3c-d52691b4dbfc